--- a/Oibi.Downloader/Oibi.Downloader.csproj
+++ b/Oibi.Downloader/Oibi.Downloader.csproj
@@ -4,12 +4,12 @@
     <TargetFramework>netstandard2.1</TargetFramework>
     <RootNamespace>Oibi.Download</RootNamespace>
     <AssemblyName>Oibi.Downloader</AssemblyName>
-    <Version>0.0.1-alpha</Version>
+    <Version>0.0.2-alpha</Version>
     <Copyright>f.fabrizi91@gmail.com</Copyright>
     <Company>oibi.dev</Company>
     <Authors>f.fabrizi91@gmail.com</Authors>
     <Description>Stateless download manager</Description>
-    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageLicenseExpression>GPLv3</PackageLicenseExpression>
     <PackageProjectUrl>https://github.com/TheTrigger/DotDownloader</PackageProjectUrl>
     <RepositoryUrl>https://github.com/TheTrigger/DotDownloader</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
